# FlexBuffer

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: flexbufCompiler.cmake  flexbufInstall.cmake  flexbufferCompiler.cmake  flexbufferInstall.cmake  flexbufferOptions.cmake  project_nameCompiler.cmake  project_nameInstall.cmake
include/flexbuf/: flexbuf.h
include/flexbuffer/: flexbuffer.h
include/project_name/: project_name.h
scripts/: README.md  quality.py  rename_project.py
src/: flexbuf.cc  flexbuffer.cc
test/: CMakeLists.txt  flexbuffer_test.cc  project_name_test.cc
tests/: CMakeLists.txt  flexbuf_test.cc
